--- a/Lab4/Code/static/css/main.css
+++ b/Lab4/Code/static/css/main.css
@@ -15,23 +15,37 @@ h1{
     font-size: 40px;
     text-align: center;
 }
+
+
 button{
     margin-top: 20px;
     background-color: white;
     border-style: solid;
-    border-color: gray;
+    border-color: #007fff;
     border-width: 1px;
-    color: black;
+    color: #007fff;
     font-size: 25px;
+    font-weight: 100;
     height:50px;
     width:15%;
+    border-radius: 5px;
 }
+
 button:hover{
     background-color: #007fff;
-    border-style: none;
-    font-size: 30px;
+    border-color:white;
     color: white;
 }
+
+button:disabled{
+    background-color: gray;
+    color:white;
+    border-color:white;
+    cursor: not-allowed;
+}
+
+
+
 
 td{
     border-top: 1px;
@@ -112,10 +126,31 @@ td{
     left: 50%;
     transform: translate(-50%,0);
 }
+
+#pagination{
+    margin-top: 20px;
+    height: 50px;
+    text-align: center;
+}
+
+#pageInfo{
+    color:gray;
+    height:inherit;
+    font-size: 25px;
+    text-align: center;
+    vertical-align: middle;
+}
+
+#currentPage{
+    color:#007fff;
+    font-size: 30px;
+}
 #resultNext{
+    margin-top: 0;
     float: right;
 }
 #resultPrev{
+    margin-top: 0;
     float:left;
 }
 
@@ -180,13 +215,12 @@ td{
     padding-left: 25px;
 }
 
-td{
-    border-top: 1px;
-    border-bottom: 1px;
-    border-left: 0;
-    border-right: 0;
-    border-style: solid;
-    padding-top: 5px;
-    padding-bottom: 5px;
+#papersPrev{
+    float: left;
+    margin-top: 0;
 }
 
+#papersNext{
+    float: right;
+    margin-top: 0;
+}
