--- a/Final Project/Code/CodeIgniter/static/css/main.css
+++ b/Final Project/Code/CodeIgniter/static/css/main.css
@@ -400,7 +400,11 @@ td.affiliationName,td.affiliationPaperNum,td.affiliationAuthorNum,td.affiliation
     padding: 0;
     margin: 0;
 }
-
+#tagCloud{
+    background-color: #f5f6fa;
+    margin-bottom: 60px;
+    overflow:hidden;
+}
 .times{
     color:gray;
 }
@@ -539,6 +543,15 @@ td.affiliationName,td.affiliationPaperNum,td.affiliationAuthorNum,td.affiliation
     position: relative;
     width: 100%;
     padding-bottom: 50%;
+    vertical-align: top;
+    overflow: hidden;
+}
+
+.left-svg-container{
+    display: inline-block;
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
     vertical-align: top;
     overflow: hidden;
 }
